--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: kubernetes-speech-translation
 spec:
-  replicas: 2  # Number of pods
+  replicas: 2
   selector:
     matchLabels:
       app: kubernetes-speech-translation
@@ -14,15 +14,18 @@ spec:
     spec:
       containers:
       - name: kubernetes-speech-translation
-        image: docker.io/sohamb16/speech-translation:latest #running from openshift
-        imagePullPolicy: Always  
-        
-        resources:
-          limits:
-            memory: "256Mi"
-            cpu: "500m"
+        image: docker.io/sohamb16/speech-translation:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 7860
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "500m"
+          limits:
+            memory: "1Gi"
+            cpu: "1"
+
 ---
 apiVersion: v1
 kind: Service
@@ -32,5 +35,19 @@ spec:
   selector:
     app: kubernetes-speech-translation
   ports:
-  - port: 8080
+  - port: 7860
     targetPort: 7860
+
+---
+apiVersion: route.openshift.io/v1
+kind: Route
+metadata:
+  name: speech-translation-route
+spec:
+  to:
+    kind: Service
+    name: kubernetes-speech-translation
+  port:
+    targetPort: 7860
+  tls:
+    termination: edge
